Fix contrast and accessibility issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ footer a {
     margin-bottom: 5px;
     padding: 10px;
     line-height: 1.5;
-    color: whitesmoke;
+    color: white;
 }
 
 /* hero image & sign up image */
@@ -228,7 +228,7 @@ footer a {
     font-size: 120%;
     font-family: 'Bebas Neue', sans-serif;
     text-transform: uppercase;
-    background-color: #f16c6b;
+    background-color: #E31616;
     color: #fafafa;
     display: block;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, .25);
